package pt.ipp.isep.dei.application;

public class AuthorizationService {
}
