package pt.ipp.isep.dei.domain.user;

public class User {
}
